<resources>
    <string name="app_name">Database</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="no_match_found">no_match_found</string>
    <string name="record_deleted">record_deleted</string>
</resources>